24.10.6/packages/arm_cortex-a7_neon-vfpv4/luci/index.md
---
---

# [releases](/releases/) / [24.10.6](/releases/24.10.6/) / [packages](/releases/24.10.6/packages/) / [arm_cortex-a7_neon-vfpv4](/releases/24.10.6/packages/arm_cortex-a7_neon-vfpv4/) / luci


| Name | Size | Date |
|:---|---:|---|
| 📁 [..](../) | | |
| 🗄️ [Packages](./Packages) | 12K | |
| 🗄️ [Packages.gz](./Packages.gz) | 4.0K | |
| 🗄️ [Packages.manifest](./Packages.manifest) | 16K | |
| 🗄️ [Packages.sig](./Packages.sig) | 4.0K | |
| 🗄️ [index.json](./index.json) | 4.0K | |
| 🗄️ [liblucihttp-lua_2023.03.15~9b5b683f-r1_arm_cortex-a7_neon-vfpv4.ipk](./liblucihttp-lua_2023.03.15~9b5b683f-r1_arm_cortex-a7_neon-vfpv4.ipk) | 4.0K | |
| 🗄️ [liblucihttp-ucode_2023.03.15~9b5b683f-r1_arm_cortex-a7_neon-vfpv4.ipk](./liblucihttp-ucode_2023.03.15~9b5b683f-r1_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [liblucihttp0_2023.03.15~9b5b683f-r1_arm_cortex-a7_neon-vfpv4.ipk](./liblucihttp0_2023.03.15~9b5b683f-r1_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [luci-app-firewall_26.075.78949~edc4547_all.ipk](./luci-app-firewall_26.075.78949~edc4547_all.ipk) | 20K | |
| 🗄️ [luci-app-package-manager_26.075.78949~edc4547_all.ipk](./luci-app-package-manager_26.075.78949~edc4547_all.ipk) | 12K | |
| 🗄️ [luci-base_26.075.78949~edc4547_arm_cortex-a7_neon-vfpv4.ipk](./luci-base_26.075.78949~edc4547_arm_cortex-a7_neon-vfpv4.ipk) | 148K | |
| 🗄️ [luci-lib-base_26.075.78949~edc4547_all.ipk](./luci-lib-base_26.075.78949~edc4547_all.ipk) | 12K | |
| 🗄️ [luci-lib-ip_26.075.78949~edc4547_arm_cortex-a7_neon-vfpv4.ipk](./luci-lib-ip_26.075.78949~edc4547_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [luci-lib-jsonc_26.075.78949~edc4547_arm_cortex-a7_neon-vfpv4.ipk](./luci-lib-jsonc_26.075.78949~edc4547_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [luci-lib-nixio_26.075.78949~edc4547_arm_cortex-a7_neon-vfpv4.ipk](./luci-lib-nixio_26.075.78949~edc4547_arm_cortex-a7_neon-vfpv4.ipk) | 32K | |
| 🗄️ [luci-light_26.075.78949~edc4547_all.ipk](./luci-light_26.075.78949~edc4547_all.ipk) | 4.0K | |
| 🗄️ [luci-lua-runtime_26.075.78949~edc4547_arm_cortex-a7_neon-vfpv4.ipk](./luci-lua-runtime_26.075.78949~edc4547_arm_cortex-a7_neon-vfpv4.ipk) | 32K | |
| 🗄️ [luci-mod-admin-full_26.075.78949~edc4547_all.ipk](./luci-mod-admin-full_26.075.78949~edc4547_all.ipk) | 4.0K | |
| 🗄️ [luci-mod-network_26.075.78949~edc4547_all.ipk](./luci-mod-network_26.075.78949~edc4547_all.ipk) | 68K | |
| 🗄️ [luci-mod-status_26.075.78949~edc4547_arm_cortex-a7_neon-vfpv4.ipk](./luci-mod-status_26.075.78949~edc4547_arm_cortex-a7_neon-vfpv4.ipk) | 44K | |
| 🗄️ [luci-mod-system_26.075.78949~edc4547_all.ipk](./luci-mod-system_26.075.78949~edc4547_all.ipk) | 24K | |
| 🗄️ [luci-proto-ipv6_26.075.78949~edc4547_all.ipk](./luci-proto-ipv6_26.075.78949~edc4547_all.ipk) | 4.0K | |
| 🗄️ [luci-proto-ppp_26.075.78949~edc4547_all.ipk](./luci-proto-ppp_26.075.78949~edc4547_all.ipk) | 4.0K | |
| 🗄️ [luci-theme-bootstrap_26.075.78949~edc4547_all.ipk](./luci-theme-bootstrap_26.075.78949~edc4547_all.ipk) | 20K | |
| 🗄️ [luci_26.075.78949~edc4547_all.ipk](./luci_26.075.78949~edc4547_all.ipk) | 4.0K | |
| 🗄️ [rpcd-mod-luci_20240305-r1_arm_cortex-a7_neon-vfpv4.ipk](./rpcd-mod-luci_20240305-r1_arm_cortex-a7_neon-vfpv4.ipk) | 16K | |
| 🗄️ [rpcd-mod-rrdns_20170710_arm_cortex-a7_neon-vfpv4.ipk](./rpcd-mod-rrdns_20170710_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [ucode-mod-html_1_arm_cortex-a7_neon-vfpv4.ipk](./ucode-mod-html_1_arm_cortex-a7_neon-vfpv4.ipk) | 24K | |
| 🗄️ [ucode-mod-lua_1_arm_cortex-a7_neon-vfpv4.ipk](./ucode-mod-lua_1_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |

